--- a/buchverwaltungapp/package.json
+++ b/buchverwaltungapp/package.json
@@ -6,7 +6,10 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "start:server": "node server/server.js",
+    "start:both": "concurrently \"npm run start\" \"npm run start:server\""
+  
   },
   "private": true,
   "dependencies": {
